--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "kmmedia-client",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://genius-space-foundation.github.io/kmmediatraininginstitute",
   "dependencies": {
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
