--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
   "name": "kmmedia-client",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://genius-space-foundation.github.io/kmmediatraininginstitute",
   "dependencies": {
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
@@ -23,6 +22,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.2"
   },
@@ -49,6 +49,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
